build: make server pom main